# rydbergtrampoline

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: architecture.md  background.md  cloud_quickstart.md  numerical_methods.md
docs/figures/: fig_bubble_histogram.json  fig_decay_traces.json  fig_gamma_vs_inv_delta.json  fig_imperfection_sensitivity.json  fig_resonance_scan.json  fig_thermodynamic_limit.json
examples/: 01_quickstart.py  02_cross_backend.py  03_finite_size_scaling.py  04_bloqade_emulator.py  README.md
rydberg_trampoline/: __init__.py  analysis.py  cli.py  conventions.py  dynamics.py  model.py  observables.py  states.py
rydberg_trampoline/backends/: __init__.py  bloqade_backend.py  numpy_backend.py  quspin_backend.py  qutip_backend.py  tenpy_backend.py
rydberg_trampoline/data/: __init__.py  loader.py
rydberg_trampoline/data/experimental/: PROVENANCE.md
rydberg_trampoline/figures/: __init__.py  _common.py  fig_bubble_histogram.py  fig_decay_traces.py  fig_gamma_N_dependence.py  fig_gamma_vs_inv_delta.py  fig_imperfection_sensitivity.py  fig_resonance_scan.py  fig_thermodynamic_limit.py
scripts/: draw_bubble_cartoon.py  draw_bubble_pedagogy.py  draw_hilbert_dim.py  draw_itebd_unit_cell.py  draw_level_scheme.py  draw_neel_prep_ramp.py  draw_ring_geometry.py  draw_vij_curve.py  regenerate_figures.sh
tests/: conftest.py  figure_hashes.json  test_analysis.py  test_bloqade_backend.py  test_conventions.py  test_cross_backend.py  test_draw_schematics.py  test_examples.py  test_figure_N_sweep.py  test_figure_regression.py  test_invariants.py  test_itebd_vs_ed.py  test_lindblad_limit.py  test_observables.py  test_states.py  test_symmetry_sectors.py
